--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<dozer.version>6.4.1</dozer.version>
 		<springdoc.version>2.0.0-RC1</springdoc.version>
 		<hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
+		<gson.version>2.10.1</gson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,7 +41,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.flywaydb</groupId>
