--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,12 @@
 		<kotlin.version>1.6.21</kotlin.version>
 		<dozer.version>6.4.1</dozer.version>
 		<springdoc.version>2.0.2</springdoc.version>
+
 		<hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
 		<gson.version>2.10.1</gson.version>
+
+		<java-jwt.version>3.18.3</java-jwt.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,13 +38,23 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>${java-jwt.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
