--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,47 @@
-version: '3.9'
+version: '3.8'
 services:
   db:
-    image: mysql:8.0.28
-    command: mysqld --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      TZ: America/Sao_Paulo
-      MYSQL_ROOT_PASSWORD: admin123
-      MYSQL_USER: docker
-      MYSQL_PASSWORD: admin123
-      MYSQL_DATABASE: rest_with_spring_boot_erudio
-      MYSQL_ROOT_HOST: '%'
-      MYSQL_TCP_PORT: 3308
+    image: mysql
     ports:
-      - 3308:3308
-    expose:
-      - 3308
+      - "3306:3306"
     networks:
       - erudio-network
-  rest-with-spring-boot-erudio:
-    image: leandrocgsi/rest-with-spring-boot-erudio
     restart: always
-    build: ./rest-with-spring-boot-and-kotlin-erudio
-    working_dir: /rest-with-spring-boot-and-kotlin-erudio
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
     environment:
-      TZ: America/Sao_Paulo
-      SPRING.DATASOURCE.URL: jdbc:mysql://db:3308/rest_with_spring_boot_erudio?useTimezone=true&serverTimezone=UTC
-      SPRING.DATASOURCE.USERNAME: root
-      SPRING.DATASOURCE.PASSWORD: admin123
+      MYSQL_ROOT_PASSWORD: '*Rgh252817'
+      MYSQL_DATABASE: grafica_kotlin
+  back:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - 80:80
-    command: mvn spring-boot:run
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - erudio-network
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/grafica_kotlin
+    volumes:
+      - .m2:/root/.m2
+
+  phpmyadmin:
     depends_on:
       - db
+    image: phpmyadmin/phpmyadmin
+    restart: always
     networks:
       - erudio-network
+    ports:
+      - 88:80
+    environment:
+      PMA_HOST: db:3306
+      MYSQL_ROOT_PASSWORD: '*Rgh252817'
+
 networks:
   erudio-network:
-    driver: bridge
