Ajuse de segurança

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/grafica_kotlin
-    username: root
+    username: rafael
     password: '*Rgh252817'
   jpa:
     hibernate:
@@ -17,4 +17,9 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     ddl-auto: none
     show-sql: false
-
+spring-doc:
+  paths-to-match:
+    - /api/**/v1/**
+    - /auth/**
+  swagger-ui:
+    use-root-path: true
