Refeito o modulo do jwt security e ajustado as  rotas do  swagger

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,9 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     ddl-auto: none
     show-sql: false
-spring-doc:
-  paths-to-match:
-    - /api/**/v1/**
-    - /auth/**
-  swagger-ui:
-    use-root-path: true
+#spring-doc:
+#  paths-to-match:
+#    - /api/**
+#    - /auth/**
+#  swagger-ui:
+#    use-root-path: true
